# iot-relay

./: .gitignore  CMakeLists.txt  README.md  monitor.sh  sdkconfig
components/App/: BinarySensor.cpp  HomeAssistant.cpp  Sensor.cpp  Switch.cpp
components/App/include/: BinarySensor.h  HomeAssistant.h  Sensor.h  Switch.h
components/HAL/: CMakeLists.txt  HAL.cpp  HAL_GPIO.cpp  HAL_MQTT.cpp  HAL_Time.cpp  HAL_WiFi.cpp  HAL_WiFiMesh.cpp
components/HAL/include/: HAL.h  HAL_GPIO.h  HAL_MQTT.h  HAL_Time.h  HAL_WiFi.h  HAL_WiFiMesh.h
main/: CMakeLists.txt  Kconfig.projbuild  board.cpp  relay_main.c  relay_main.cpp
main/HAL/: HAL_Time.cpp  HAL_Time.h
